<?xml version="1.0"?>
<package format="3">
  <name>unseen_obj_clst_ros2</name>
  <version>0.0.1</version>
  <description>ROS 2 wrapper for unseen object clustering (segmentation service).</description>

  <maintainer email="you@example.com">Huajing Zhao</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclpy</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
